--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "deploy": "gh-pages -d out", 
   "name": "web-mm-lesimages",
   "version": "1.0.0",
   "private": true,
@@ -12,5 +13,8 @@
     "next": "^14.2.35",
     "react": "18.3.1",
     "react-dom": "18.3.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
